Table overflow fix on articles on mobile

--- a/themes/gv_sky/css/sass/_parts_blog/article-body.sass
+++ b/themes/gv_sky/css/sass/_parts_blog/article-body.sass
@@ -302,6 +302,7 @@
 			> .rtecenter:nth-child(1) > img
 				width: 100% !important
 				max-width: 700px
+				height: auto !important
 
 			> .rtecenter:nth-child(2) > img
 				max-width: 100% !important
@@ -313,6 +314,10 @@
 			font-weight: 500
 			line-height: 1.3
 			color: $black
+
+			.table-wrap
+				width: 100%
+				overflow: scroll;
 
 			table
 				width: 100% !important
